# il5-brick-breaker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yaml
.github/: workflows
.github/workflows/: build-publish.yaml  ci.yaml  compliance-check.yaml  contract-tests.yaml  deploy.yaml  destroy.yaml  flux-bootstrap.yaml  security-scan.yaml  terraform.yaml
apps/agent-runtime/: Dockerfile  alembic.ini  component-definition.yaml  pyproject.toml
apps/agent-runtime/alembic/: env.py
apps/agent-runtime/alembic/versions/: 0001_create_scores_table.py
apps/agent-runtime/src/: config.py  main.py  schemas.py
apps/agent-runtime/src/db/: engine.py  models.py  repository.py
apps/agent-runtime/src/middleware/: audit.py  security_headers.py
apps/agent-runtime/src/routes/: health.py  scores.py
apps/agent-runtime/tests/: conftest.py  test_audit_middleware.py  test_health.py  test_repository.py  test_schemas.py  test_scores_api.py
apps/web-ui/: Dockerfile  component-definition.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
compliance/: c2p-config.yaml  trestle-config.yaml
compliance/component-definitions/: system-component-def.json
compliance/poam/: poam.json
compliance/profiles/: dod-il5.json  project-sentinel.json
compliance/system-security-plan/: ssp.md
deploy/base/: ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml
deploy/flux-system/: gotk-sync.yaml
deploy/infrastructure/: cert-manager.yaml  cluster-issuers.yaml  ingress-nginx.yaml  kustomization.yaml  kyverno.yaml  namespaces.yaml  sources.yaml
docs/: onboarding.md  security.md
docs/architecture/: environments.md  pipelines.md
docs/runbooks/: azure-deployment.md  database-backup.md  deploy.md  rollback.md
infrastructure/terraform/: backend.tf
policies/kyverno/: disallow-privileged.yaml  require-labels.yaml  require-non-root.yaml  require-probes.yaml  require-resource-limits.yaml  restrict-registries.yaml
policies/sentinel/: enforce-encryption.sentinel
scripts/compliance/: generate-poam.sh  generate-ssp.sh  stig-check.sh  sync-emass.py  validate-oscal.sh
scripts/dev/: run-tests.sh  setup-local.sh
scripts/security/: generate-sbom.sh  scan-secrets.sh  sign-artifact.sh
tests/contract/: test_api_contract.py
tests/integration/: conftest.py  test_input_validation_journey.py  test_operational_health.py  (+1 more)
(+60 files in other folders)
